<resources>
    <string name="app_name">MyPunch</string>
    <string name="pseudoFieldHint">pseudo</string>
    <string name="pswdFieldHint">mot de passe</string>
    <string name="loginButtonText">se connecter</string>
    <string name="registerButtonText">s\'inscrire</string>
    <string name="repeat_pswd">répéter mot de passe</string>
    <string name="sessionOf">Session du </string>
    <string name="session">Session</string>
    <string name="connectivity">Connectivité</string>
    <string name="account">Compte</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="connectivites">connectivity</string>
    <string name="comptes">Comptes</string>
    <string name="scan_devices">Scan Devices</string>
    <string name="stop_scan_devices">Stop</string>
    <string name="liste_vide">Liste vide</string>
    <string name="disconnect">Disconnect</string>
    <string name="no_name">No Name</string>
    <string name="startLabel">from </string>
    <string name="endLabel">to </string>
    <string name="nbPunchesLabel">Punches given :</string>
    <string name="powerLabel"><b>Power</b></string>
    <string name="minPowerLabel">minimum : </string>
    <string name="avgPowerLabel">average :</string>
    <string name="maxPowerLabel">maximum :</string>
    <string name="dayLabel">on </string>
    <string name="info_new_session">Vous n’êtes pas obligé de spécifier un temps à votre séance</string>
    <string name="commence_dans">Commence dans :</string>
    <string name="initTime">0h0m0s</string>
    <string name="termine_dans">Termine dans :</string>
    <string name="start">Start</string>
    <string name="indetermine">Indéterminé</string>
    <string name="reset">Reset</string>
    <string name="valider">Valider</string>
    <string name="stop">STOP</string>
    <string name="annuler">Annuler</string>
    <string name="settings">settings</string>
    <string name="mon_bluetooth">Mon bluetooth</string>
    <string name="mon_addresse">Mon addresse</string>
    <string name="mypunch">MyPunch</string>
    <string name="jourLabel">Le</string>
    <string name="temps">Temps</string>
    <string name="duree">Durée</string>
    <string name="coups">Coups</string>
    <string name="total_des_coups">Total des coups</string>
    <string name="force_min">Force min</string>
    <string name="force_max">Force max</string>
    <string name="force_moyenne">Force moyenne</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="synthese">Synthèse</string>
    <string name="h">H</string>
    <string name="m">M</string>
    <string name="s">S</string>
    <string name="registerEmailHint">email</string>
    <string name="registerFirstnameHint">prénom</string>
    <string name="registerLastnameHint">nom</string>
</resources>
