<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.esgi.mypunch.PunchDetailsActivity">

    <TextView
        style="@style/boxingDetailsTextView"
        android:id="@+id/dayLabel"
        android:text="@string/dayLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/boxingDetailsTextView"
        android:id="@+id/day"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/dayLabel"/>

    <TextView
        style="@style/boxingDetailsTextView"
        android:id="@+id/startLabel"
        android:text="@string/startLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dayLabel"/>

    <TextView
        style="@style/boxingDetailsTextView"
        android:id="@+id/start"
        app:layout_constraintLeft_toRightOf="@id/startLabel"
        app:layout_constraintTop_toBottomOf="@id/day"/>

    <TextView
        style="@style/boxingDetailsTextView"
        android:id="@+id/endLabel"
        android:text="@string/endLabel"
        app:layout_constraintLeft_toRightOf="@id/start"
        app:layout_constraintTop_toBottomOf="@id/dayLabel"/>

    <TextView
        style="@style/boxingDetailsTextView"
        android:id="@+id/end"
        app:layout_constraintTop_toBottomOf="@id/day"
        app:layout_constraintLeft_toRightOf="@id/endLabel"/>

    <TextView
        style="@style/boxingDetailsTextView"
        android:id="@+id/nbPunchesLabel"
        android:text="@string/nbPunchesLabel"
        app:layout_constraintTop_toBottomOf="@id/startLabel"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        style="@style/boxingDetailsTextView"
        android:id="@+id/nbPunches"
        app:layout_constraintTop_toBottomOf="@id/end"
        app:layout_constraintLeft_toRightOf="@id/nbPunchesLabel"/>

    <TextView
        style="@style/boxingDetailsTextView"
        android:id="@+id/powerLabel"
        android:text="@string/powerLabel"
        app:layout_constraintTop_toBottomOf="@id/nbPunchesLabel"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        style="@style/boxingDetailsTextView"
        android:id="@+id/minPowerLabel"
        android:text="@string/minPowerLabel"
        app:layout_constraintTop_toBottomOf="@id/powerLabel"/>

    <TextView
        style="@style/boxingDetailsTextView"
        android:id="@+id/minPower"
        app:layout_constraintTop_toBottomOf="@id/powerLabel"
        app:layout_constraintLeft_toRightOf="@id/minPowerLabel"/>

    <TextView
        style="@style/boxingDetailsTextView"
        android:id="@+id/avgPowerLabel"
        android:text="@string/avgPowerLabel"
        app:layout_constraintTop_toBottomOf="@id/minPowerLabel"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        style="@style/boxingDetailsTextView"
        android:id="@+id/avgPower"
        app:layout_constraintTop_toBottomOf="@id/minPower"
        app:layout_constraintLeft_toRightOf="@id/avgPowerLabel"/>

    <TextView
        style="@style/boxingDetailsTextView"
        android:id="@+id/maxPowerLabel"
        android:text="@string/maxPowerLabel"
        app:layout_constraintTop_toBottomOf="@id/avgPower"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        style="@style/boxingDetailsTextView"
        android:id="@+id/maxPower"
        app:layout_constraintTop_toBottomOf="@id/avgPower"
        app:layout_constraintLeft_toRightOf="@id/maxPowerLabel"/>

</android.support.constraint.ConstraintLayout>
